--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,63 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
+html {
   box-sizing: border-box;
+  font-size: 18px;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+}
+
+body {
+  background-color: var(--backgroundColor);
+  -ms-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+}
+
+#__next {
+  height: 100%;
+}
+
+.logo {
+  z-index: 1;
+  float: left;
+  width: 328px;
+  height: 100%;
+  align-items: center;
+  color: rgb(247, 252, 251);
+  position: relative;
+  font-size: 48px;
+  vertical-align: middle;
+  padding-top:128px;
+}
+
+.header {
+  text-align: center;
+  z-index: 1;
+  color: #fff;
+
+}
+.header:after {
+  filter: blur(3px);    
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: url(/background_head.png) no-repeat;
+  z-index: -1;
+  height: 420px;
+  background-size: cover;
+}
+
+.content {
+  padding-left: 48px;
+  font-size: 24px;
+  color: #000;
+  margin-top: 348px;
 }
